Search popup fix when on mobile device.

--- a/docs/_assets/stylesheets/styles.css
+++ b/docs/_assets/stylesheets/styles.css
@@ -866,7 +866,7 @@ footer p {
         display: none;
         left: 40px;
         max-width: initial;
-        right: 15px;
+        right: 30px;
         margin: 0;
     }
     #page-search>div {
